{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 56,
  "lineage": "c201a792-5924-50f6-a3ba-73b7e0c9705d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "MyALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:469204214656:loadbalancer/app/MyALB/3564b4ad4c6d3ecf",
            "arn_suffix": "app/MyALB/3564b4ad4c6d3ecf",
            "dns_name": "MyALB-286914489.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:469204214656:loadbalancer/app/MyALB/3564b4ad4c6d3ecf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "MyALB",
            "security_groups": [
              "sg-075f2d616035d4edb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-092e297d5b887bbb0"
              },
              {
                "subnet_id": "subnet-09568d98cd83ab071"
              },
              {
                "subnet_id": "subnet-096838212b6918185"
              }
            ],
            "subnets": [
              "subnet-092e297d5b887bbb0",
              "subnet-09568d98cd83ab071",
              "subnet-096838212b6918185"
            ],
            "vpc_id": "vpc-0ee2411591be6bcd8",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow_any-my_vpc_two",
            "aws_subnet.subnet_2_two_private",
            "aws_subnet.subnet_two_private",
            "aws_subnet.subnet_two_public",
            "aws_vpc.vpc_two"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:469204214656:listener/app/MyALB/3564b4ad4c6d3ecf/d330fe418f5c96f5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:469204214656:targetgroup/AlbTargetGroup/dbe9349124eca055",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:469204214656:listener/app/MyALB/3564b4ad4c6d3ecf/d330fe418f5c96f5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:469204214656:loadbalancer/app/MyALB/3564b4ad4c6d3ecf",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.MyALB",
            "aws_alb_target_group.instance-target-group",
            "aws_security_group.allow_any-my_vpc_two",
            "aws_subnet.subnet_2_two_private",
            "aws_subnet.subnet_two_private",
            "aws_subnet.subnet_two_public",
            "aws_vpc.vpc_two"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "instance-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:469204214656:targetgroup/AlbTargetGroup/dbe9349124eca055",
            "arn_suffix": "targetgroup/AlbTargetGroup/dbe9349124eca055",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:469204214656:targetgroup/AlbTargetGroup/dbe9349124eca055",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "AlbTargetGroup",
            "port": 8888,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ee2411591be6bcd8"
          },
          "dependencies": [
            "aws_vpc.vpc_two"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_ec2_vpc_one_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:469204214656:instance/i-0da6663efa27376c4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0da6663efa27376c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-072bd8c9872fc0c0a",
            "private_dns": "ip-10-10-8-239.ec2.internal",
            "private_ip": "10.10.8.239",
            "public_ip": "3.92.208.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07b82868ac5777e0a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b3cf4c25cc744275",
            "tags": {
              "Name": "BASTION",
              "environment": "BASTION_ENV",
              "owner": "ME",
              "project": "test"
            },
            "tags_all": {
              "Name": "BASTION",
              "environment": "BASTION_ENV",
              "owner": "ME",
              "project": "test"
            },
            "tenancy": "default",
            "volume_tags": {
              "environment": "BASTION_ENV",
              "owner": "ME",
              "project": "test"
            },
            "vpc_security_group_ids": [
              "sg-008b1a3796d7d7090"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.allow_any-my_vpc_one",
            "aws_subnet.subnet_one_public",
            "aws_vpc.vpc_one",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469204214656:internet-gateway/igw-06a797962e85cdc65",
            "id": "igw-06a797962e85cdc65",
            "owner_id": "469204214656",
            "vpc_id": "vpc-04a40d0266993e905"
          },
          "dependencies": [
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469204214656:internet-gateway/igw-0507a3aeb482b5371",
            "id": "igw-0507a3aeb482b5371",
            "owner_id": "469204214656",
            "vpc_id": "vpc-0ee2411591be6bcd8"
          },
          "dependencies": [
            "aws_vpc.vpc_two"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "one_vpc_2_two_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "10.10.100.0/22",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f9329701ca5b66282804804333",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f9329701ca5b6628",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-05f65c0710c61f480"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_one",
            "aws_vpc.vpc_two",
            "aws_vpc_peering_connection.one_vpc_2_two_vpc",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06a797962e85cdc65",
            "id": "r-rtb-0f9329701ca5b66281080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f9329701ca5b6628",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_one",
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0507a3aeb482b5371",
            "id": "r-rtb-0ca1ff9eef1d4f06a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ca1ff9eef1d4f06a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_two",
            "aws_vpc.vpc_two"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "two_vpc_2_one_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "10.10.8.0/22",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ca1ff9eef1d4f06a3739740542",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ca1ff9eef1d4f06a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-05f65c0710c61f480"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_one",
            "aws_vpc.vpc_two",
            "aws_vpc_peering_connection.one_vpc_2_two_vpc",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_any-my_vpc_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469204214656:security-group/sg-008b1a3796d7d7090",
            "description": "allow any",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008b1a3796d7d7090",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_any",
            "name_prefix": "",
            "owner_id": "469204214656",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04a40d0266993e905"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_any-my_vpc_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469204214656:security-group/sg-075f2d616035d4edb",
            "description": "allow any",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-075f2d616035d4edb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_any",
            "name_prefix": "",
            "owner_id": "469204214656",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ee2411591be6bcd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_two"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rule_for_private_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469204214656:security-group/sg-0bddf535a4e4bf243",
            "description": "ssh_bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bddf535a4e4bf243",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "nginx",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "nginx",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              },
              {
                "cidr_blocks": [
                  "10.10.8.0/24"
                ],
                "description": "ssh_bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh_bastion",
            "name_prefix": "",
            "owner_id": "469204214656",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04a40d0266993e905"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rule_for_private_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469204214656:security-group/sg-00fe3385467f7042d",
            "description": "ssh_bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00fe3385467f7042d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "nginx",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "nginx",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              },
              {
                "cidr_blocks": [
                  "10.10.8.0/24"
                ],
                "description": "ssh_bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh_bastion",
            "name_prefix": "",
            "owner_id": "469204214656",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ee2411591be6bcd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_two"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_2_one_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469204214656:subnet/subnet-0282f588813e90997",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.11.0/24",
            "id": "subnet-0282f588813e90997",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "469204214656",
            "vpc_id": "vpc-04a40d0266993e905"
          },
          "dependencies": [
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_2_two_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469204214656:subnet/subnet-092e297d5b887bbb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.102.0/24",
            "id": "subnet-092e297d5b887bbb0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "469204214656",
            "vpc_id": "vpc-0ee2411591be6bcd8"
          },
          "dependencies": [
            "aws_vpc.vpc_two"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_one_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469204214656:subnet/subnet-019d2d46b600b7b2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.10.0/24",
            "id": "subnet-019d2d46b600b7b2e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "469204214656",
            "vpc_id": "vpc-04a40d0266993e905"
          },
          "dependencies": [
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_one_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469204214656:subnet/subnet-0b3cf4c25cc744275",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.8.0/24",
            "id": "subnet-0b3cf4c25cc744275",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "469204214656",
            "vpc_id": "vpc-04a40d0266993e905"
          },
          "dependencies": [
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_two_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469204214656:subnet/subnet-09568d98cd83ab071",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.101.0/24",
            "id": "subnet-09568d98cd83ab071",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "469204214656",
            "vpc_id": "vpc-0ee2411591be6bcd8"
          },
          "dependencies": [
            "aws_vpc.vpc_two"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_two_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469204214656:subnet/subnet-096838212b6918185",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.100.0/24",
            "id": "subnet-096838212b6918185",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "469204214656",
            "vpc_id": "vpc-0ee2411591be6bcd8"
          },
          "dependencies": [
            "aws_vpc.vpc_two"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469204214656:vpc/vpc-04a40d0266993e905",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.8.0/22",
            "default_network_acl_id": "acl-0a0eba93e3e3e666e",
            "default_route_table_id": "rtb-0f9329701ca5b6628",
            "default_security_group_id": "sg-055c9d01cea2b2d96",
            "dhcp_options_id": "dopt-8fb651f2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04a40d0266993e905",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f9329701ca5b6628",
            "owner_id": "469204214656",
            "tags": {
              "Name": "my_vpc_one"
            },
            "tags_all": {
              "Name": "my_vpc_one"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469204214656:vpc/vpc-0ee2411591be6bcd8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.100.0/22",
            "default_network_acl_id": "acl-04b7411b89611b308",
            "default_route_table_id": "rtb-0ca1ff9eef1d4f06a",
            "default_security_group_id": "sg-091c6840298c8399d",
            "dhcp_options_id": "dopt-8fb651f2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ee2411591be6bcd8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ca1ff9eef1d4f06a",
            "owner_id": "469204214656",
            "tags": {
              "Name": "my_vpc_two"
            },
            "tags_all": {
              "Name": "my_vpc_two"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_for_distrib",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:469204214656:vpc-endpoint/vpce-06f75802867e90afd",
            "cidr_blocks": [
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19"
            ],
            "id": "vpce-06f75802867e90afd",
            "owner_id": "469204214656",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0ee2411591be6bcd8"
          },
          "dependencies": [
            "aws_vpc.vpc_two"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "one_vpc_2_two_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-05f65c0710c61f480",
            "peer_owner_id": "469204214656",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0ee2411591be6bcd8",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-04a40d0266993e905"
          },
          "dependencies": [
            "aws_vpc.vpc_one",
            "aws_vpc.vpc_two",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    }
  ]
}